--- a/app/(site)/components/Footer/styles.css
+++ b/app/(site)/components/Footer/styles.css
@@ -1,9 +1,10 @@
-.footer {
-  display: none;
+/* .footer {
+  position: fixed;
+  bottom: 0;
 }
 
 @media (min-width: 768px) {
   .footer {
     display: block;
   }
-}
+} */
